--- a/a3/package.json
+++ b/a3/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "mongoose":"^6.9.0",
+    "mongodb": "^4.13.0"
   }
 }
